@@ -270,6 +270,8 @@ class Net::SSLeay::SSL_CTX : pointer {
   
   native method set_alpn_select_cb_with_protocols : void ($protocols : string[]);
   
+  native method set_next_proto_select_cb : void ($cb : Net::SSLeay::Callback::NextProtoSelect, $arg : object);
+  
   native method set_next_proto_select_cb_with_protocols : void ($protocols : string[]);
   
   native method set_next_protos_advertised_cb_with_protocols : void ($protocols : string[]);
